--- a/index.html
+++ b/index.html
@@ -46,5 +46,6 @@
 </head>
   <body class="bg-bread-50 text-bread-900 font-sans antialiased">
     <div id="root"></div>
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
